Test cancelBookingBookingIsCanceled